--- a/main.html
+++ b/main.html
@@ -7,25 +7,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hopper's Odyssey</title>
   <link rel="stylesheet" href="styles.css">
-  <style>
-    html,
-    body {
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      height: 100%;
-    }
-  </style>
 </head>
 
 <body>
   <div class="map-container">
     <img src="map.PNG" alt="Pirate Map" class="map-image">
-    <button class="quest-button" data-quest="1">✕</button>
-    <button class="quest-button" data-quest="2">✕</button>
+    <button class="quest-button" data-quest="na" style="left: 22%; top: 25%">
+    </button>
+    <button class="quest-button" data-quest="sa" style="left: 30%; top: 60%"></button>
+    <button class="quest-button" data-quest="afr" style="left: 47%; top: 50%"></button>
+    <button class="quest-button" data-quest="eur" style="left: 50%; top: 23%"></button>
+    <button class="quest-button" data-quest="as" style="left: 78%; top: 30%"></button>
+    <button class="quest-button" data-quest="aus" style="left: 85%; top: 74%"></button>
   </div>
 
-  <div id="questPopup" class="popup">...</div>
+  <div id="questPopup" class="popup">
+    <div class="popup-content">
+      <span class="close-btn">&times;</span>
+      <p id="questText"></p>
+    </div>
+  </div>
 
   <script src="quest.js"></script>
 </body>
