added content for all Continents windows

--- a/Continents/na.html
+++ b/Continents/na.html
@@ -2,37 +2,110 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Delicious Pancake Recipe</title>
-  <link rel="stylesheet" href="na.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>New England "Treasure Chest" Clam Chowder</title>
+  <!-- Link to your external stylesheet -->
+  <link rel="stylesheet" href="na.css" />
 </head>
 
 <body>
-  <div class="recipe-container">
-    <h1>Delicious Pancake Recipe</h1>
-    <h2>Ingredients</h2>
+  <!-- Main container that holds both the scroll background and the recipe text -->
+  <div class="scroll-container">
+    <h1>North America: New England "Treasure Chest" Clam Chowder</h1>
+    <p><em>Description:</em> A creamy, briny chowder packed with clams, potatoes, and smoky bacon, evoking the hidden
+      treasures of sunken ships along the New England coast. Served in a bread bowl shaped like a pirate’s chest!</p>
+    <p><strong>Difficulty:</strong> ⭐⭐✨ (2.5/5)</p>
+
+    <h2>Materials List</h2>
+    <h3>For the Chowder:</h3>
     <ul>
-      <li>1 cup all-purpose flour</li>
-      <li>2 tablespoons sugar</li>
-      <li>2 teaspoons baking powder</li>
-      <li>1/2 teaspoon salt</li>
-      <li>1 cup milk</li>
-      <li>1 large egg</li>
-      <li>2 tablespoons melted butter</li>
-      <li>1 teaspoon vanilla extract</li>
+      <li>2 lbs fresh littleneck clams (or 2 cups chopped canned clams in juice)</li>
+      <li>4 slices thick-cut bacon, diced</li>
+      <li>1 large onion, finely chopped</li>
+      <li>3 cloves garlic, minced</li>
+      <li>3 medium russet potatoes, peeled and diced into ½-inch cubes</li>
+      <li>2 cups fish or chicken broth</li>
+      <li>1 cup heavy cream</li>
+      <li>1 tsp fresh thyme leaves (or ½ tsp dried thyme)</li>
+      <li>1 bay leaf</li>
+      <li>½ tsp smoked paprika</li>
+      <li>Salt and black pepper to taste</li>
+      <li>2 tbsp butter</li>
+      <li>1 tbsp all-purpose flour (for thickening, optional)</li>
     </ul>
-    <h2>Instructions</h2>
+
+    <h3>For Serving:</h3>
+    <ul>
+      <li>1 round sourdough loaf (to make a bread bowl)</li>
+      <li>Oyster crackers or crushed "hardtack" (traditional ship biscuit) for garnish</li>
+      <li>Fresh parsley, chopped</li>
+    </ul>
+
+    <h2>In-Depth Instructions</h2>
     <ol>
-      <li>In a large bowl, whisk together the flour, sugar, baking powder, and salt.</li>
-      <li>In another bowl, beat the milk, egg, melted butter, and vanilla extract.</li>
-      <li>Pour the wet ingredients into the dry ingredients and stir until just combined. A few lumps are okay!</li>
-      <li>Heat a non-stick pan over medium heat and lightly grease it with butter or oil.</li>
-      <li>Pour about 1/4 cup of batter onto the pan for each pancake.</li>
-      <li>Cook until bubbles form on the surface, then flip and cook until golden brown on both sides.</li>
-      <li>Serve warm with your favorite toppings such as maple syrup, fresh fruit, or whipped cream.</li>
+      <li>
+        <h3>Step 1: Prep the Clams (Skip if Using Canned)</h3>
+        <ul>
+          <li>Clean fresh clams: Scrub the shells under cold water to remove grit. Discard any clams with cracked shells
+            or that don’t close when tapped.</li>
+          <li>Steam the clams: In a large pot, add 1 cup of water or broth. Bring to a boil, add clams, cover, and steam
+            for 5–8 minutes until shells open. Discard any unopened clams.</li>
+          <li>Reserve clam juice: Strain the steaming liquid through a fine-mesh sieve to remove grit. Set aside.</li>
+          <li>Remove clam meat: Once cool, shuck the clams, chop the meat, and set aside.</li>
+        </ul>
+      </li>
+
+      <li>
+        <h3>Step 2: Build the Chowder Base</h3>
+        <ul>
+          <li>Render the bacon: In a large Dutch oven or heavy pot, cook diced bacon over medium heat until crispy (5–7
+            mins). Remove bacon with a slotted spoon and set aside. Leave 2 tbsp bacon fat in the pot.</li>
+          <li>Sauté aromatics: Add chopped onion to the bacon fat. Cook 5 mins until translucent. Stir in garlic and
+            cook 1 min until fragrant.</li>
+          <li>Thicken (optional): Sprinkle 1 tbsp flour over the onions and garlic. Cook 2 mins to make a roux, stirring
+            constantly.</li>
+        </ul>
+      </li>
+
+      <li>
+        <h3>Step 3: Simmer the Chowder</h3>
+        <ul>
+          <li>Add potatoes and broth: Stir in diced potatoes, reserved clam juice (or broth if using canned clams),
+            fish/chicken broth, thyme, bay leaf, and smoked paprika. Bring to a boil.</li>
+          <li>Cook potatoes: Reduce heat to a simmer. Cook uncovered for 15–20 mins until potatoes are fork-tender.</li>
+          <li>Incorporate clams and cream: Stir in chopped clams, heavy cream, and butter. Simmer gently for 5 mins (do
+            not boil, or cream may curdle). Season with salt and pepper.</li>
+        </ul>
+      </li>
+
+      <li>
+        <h3>Step 4: Assemble the Pirate "Treasure Chest"</h3>
+        <ul>
+          <li>Carve the bread bowl: Cut off the top ¼ of the sourdough loaf. Hollow out the center, leaving a 1-inch
+            border. Brush the inside with melted butter and toast in a 375°F oven for 5–10 mins until crispy.</li>
+          <li>Serve: Ladle chowder into the bread bowl. Top with crispy bacon, crushed hardtack or oyster crackers, and
+            parsley.</li>
+        </ul>
+      </li>
     </ol>
+
+    <h2>Tips for Landlubbers</h2>
+    <ul>
+      <li><strong>Shortcut:</strong> Use 2 cans of chopped clams with juice (skip Step 1).</li>
+      <li><strong>Bread bowl hack:</strong> Use a serrated knife to carve jagged edges into the bread for a "treasure
+        chest" look.</li>
+      <li><strong>Smoky flavor:</strong> Add ½ tsp liquid smoke if you don’t have smoked paprika.</li>
+    </ul>
+
+    <h2>Why It’s Pirate-Worthy</h2>
+    <p>Clams were a staple for sailors in colonial New England, and "hardtack" (crushed here as garnish) was a notorious
+      ship biscuit. The bread bowl doubles as an edible "chest" for your briny treasure! Yo-ho-ho, enjoy with a mug of
+      spiced rum cider! 🦑🍲</p>
+    <button class="complete-button">Complete Quest</button>
   </div>
+
+
 </body>
 
 </html>
