--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <title>Hoppers Odyssey</title>
 </head>
 <body>
+    <div id="titleOverlay">Hopper's Odyssey</div>
+    
     <div id="game-container">
+        
         <!-- SVG Map -->
         <svg id="worldMap" width="1690" height="810" style="position:relative">
             <!-- Base Map Image -->
