--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
             </defs>       
         </svg>
 
-        <button class="quest-button" data-quest="na" style="left: 22%; top: 25%"></button>
-        <button class="quest-button" data-quest="sa" style="left: 30%; top: 65%"></button>
-        <button class="quest-button" data-quest="afr" style="left: 47%; top: 50%"></button>
-        <button class="quest-button" data-quest="eur" style="left: 52%; top: 23%"></button>
-        <button class="quest-button" data-quest="as" style="left: 78%; top: 30%"></button>
-        <button class="quest-button" data-quest="aus" style="left: 85%; top: 74%"></button>
+        <button class="quest-button" data-quest="na" style="left: 27%; top: 37.04%"></button> <!-- na -->
+        <button class="quest-button" data-quest="sa" style="left: 33.57%; top: 61.73%"></button> <!-- sa -->
+        <button class="quest-button" data-quest="afr" style="left: 51.59%; top: 49.38%"></button> <!-- af -->
+        <button class="quest-button" data-quest="eur" style="left: 52%; top: 31%"></button> <!-- eu -->
+        <button class="quest-button" data-quest="as" style="left: 69.5%; top: 37.04%"></button> <!-- as -->
+        <button class="quest-button" data-quest="aus" style="left: 80%; top: 67%"></button> <!-- aus -->
 
         <div id="player">
             <img src="ship.png" width="70px">
