--- a/Continents/afr.html
+++ b/Continents/afr.html
@@ -90,7 +90,7 @@
         Africa—this dish is a treasure trove of their plunder!</li>
     </ul>
 
-    <button class="complete-button">Complete Quest</button>
+    <a href="/index.html" class="complete-button">Complete Quest</a>
   </div>
 </body>
 
