--- a/Continents/as.html
+++ b/Continents/as.html
@@ -139,7 +139,7 @@
       <li><strong>Why It’s Pirate-Worthy:</strong> Rum was currency for Caribbean pirates—this stew is liquid gold!</li>
     </ul>
 
-    <button class="complete-button">Complete Quest</button>
+    <a href="/index.html" class="complete-button">Complete Quest</a>
   </div>
 </body>
 
