--- a/Continents/aus.html
+++ b/Continents/aus.html
@@ -76,7 +76,7 @@
     <p>Avast, ye hungry scallywags! With these recipes, your galley will rival the finest pirate galleon. Now, weigh
       anchor and feast! 🏴‍☠️🍴</p>
 
-    <button class="complete-button">Complete Quest</button>
+      <a href="/index.html" class="complete-button">Complete Quest</a>
   </div>
 </body>
 
