--- a/Continents/eur.html
+++ b/Continents/eur.html
@@ -86,7 +86,7 @@
         galleon’s cargo hold!</li>
     </ul>
 
-    <button class="complete-button">Complete Quest</button>
+    <a href="/index.html" class="complete-button">Complete Quest</a>
   </div>
 </body>
 
