--- a/Continents/na.html
+++ b/Continents/na.html
@@ -102,7 +102,8 @@
     <p>Clams were a staple for sailors in colonial New England, and "hardtack" (crushed here as garnish) was a notorious
       ship biscuit. The bread bowl doubles as an edible "chest" for your briny treasure! Yo-ho-ho, enjoy with a mug of
       spiced rum cider! 🦑🍲</p>
-    <button class="complete-button">Complete Quest</button>
+
+      <a href="/index.html" class="complete-button">Complete Quest</a>
   </div>
 
 
