--- a/Continents/sa.html
+++ b/Continents/sa.html
@@ -84,7 +84,7 @@
 
     
 
-    <button class="complete-button">Complete Quest</button>
+    <a href="/index.html" class="complete-button">Complete Quest</a>
   </div>
 </body>
 
